fixed layout shifting

--- a/styles/animations/particles.css
+++ b/styles/animations/particles.css
@@ -19,8 +19,8 @@ canvas {
   width: 100vw;
   height: 100vh;
   background-image: url('../../assets/hero-bg.webp');
-  /* filter: blur(2px); */
-  backdrop-filter: blur(2px);
+  filter: blur(2px);
+  /* backdrop-filter: blur(2px); */
   opacity: 0.5;
   background-position: center;
   background-size: cover;
@@ -38,9 +38,8 @@ canvas {
   font-size: 0.8em;
   text-align: left;
   text-indent: 4px;
-  line-height: 14px;
-  padding-bottom: 2px;
-  font-family: Helvetica, Arial, sans-serif;
+  /* line-height: 14px; */
+  /* padding-bottom: 2px; */
   font-weight: bold;
 }
 
