--- a/styles/components/hero-new.css
+++ b/styles/components/hero-new.css
@@ -1,32 +1,43 @@
 .hero{
   text-align: center;
+  padding-top: 3rem;
+  margin-top: 3rem;
+  margin-bottom: 4rem;
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
-  z-index: 2;
-  margin-top: 3rem;
   gap: 1.5rem;
-  margin-bottom: 4rem;
+  z-index: 2;
+  height: calc(100svh - (10svh + 7rem));
 }
 
 .hero__img{
   border-radius: 20%;
-  width: 8rem;
-  height: 8rem;
+  width: var(--size-10xl);
+  height: var(--size-10xl);
   z-index: 2;
   transform: translateY(0);
   animation: float 6s ease-in-out infinite;
   -webkit-animation: float 5s ease-in-out infinite;
-  margin-top: 3rem;
+  /* margin-top: 1.5rem; */
+}
+
+.rocket-img{
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  width: 24rem;
+  z-index: -199;
+  /* opacity: .5; */
+  /* height: 8rem; */
 }
 
 .hero__title{
   font-family: 'Supreme', sans-serif;
-  letter-spacing: 4px;
+  letter-spacing: 1rem;
   color: #fff;
-  font-size: 6rem;
-  font-weight: 100;
+  font-size: var(--size-5xl);
+  font-weight: 800;
 }
 
 .hero__subtitle{
