--- a/styles/components/styledbutton.css
+++ b/styles/components/styledbutton.css
@@ -1,7 +1,7 @@
 .wrapper {
   display: flex;
   justify-content: center;
-  margin-top: 2rem;
+  margin-top: 5rem;
 }
 
 .cta {
